rollingPuppy/src/main/webapp/stylesheets/mobileMain.css
body, html {
	position: relative;
	height: 100%;
	overflow: hidden;
}

a {
	text-decoration: none;
}

body * {
	display: block;
	font-size: 15px;
	font-family: Helvetica;
}

header {
	position: absolute;
	width: 100%;
	height: 50px;
	background-color: #F5F5F5;
	border-bottom: 1px solid #555;
	z-index: 100;
}

logo>a {
	position: absolute;
	top: 11px;
	left: 5px;
	width: 100px;
	height: 33px;
	background: url("/images/logo.png") no-repeat;
	background-size: 100%;
}

searchBox {
	position: absolute;
	top: 0px;
	right: 0px;
	left: 110px;
	height: 50px;
}

searchBox form {
	position: relative;
	width: 100%;
	height: 100%;
}

searchBox form * {
	display: inline-block;
}

searchBox inputTextWrapper {
	position: absolute;
	top: 5px;
	right: 5px;
	bottom: 5px;
	left: 0px;
	background-color: white;
	border-radius: 4px;
	-webkit-border-radius: 4px;
	border: 1px solid #ABABAB;
}

inputTextWrapper inputTextPositioner {
	position: absolute;
	top: 0px;
	right: 10px;
	bottom: 0px;
	left: 10px;
}

inputTextPositioner input[type=text] {
	position: absolute;
	font-size: 17px;
	line-height: 27px;
	top: 5.5px;
	width: 100%;
	height: 27px;
	border: none;
	padding: 0px;
}

searchBox input[type=submit] {
	display: none;
}

navigation {
	position: absolute;
	top: 51px;
	z-index: 100;
}

menu {
	display: table;
	width: 100%;
	height: 43px;
	border-bottom: 1px solid #9e9f9f;
	background-color: #FDFDFD;
	table-layout: fixed;
}

menu>* {
	display: table-cell;
	white-space: nowrap;
	text-align: center;
	width: 25%;
}

menu>search.on {
	border-bottom: 3px solid #5d8bfc;
}

menu>chatting.on {
	border-bottom: 3px solid #aac700;
}

menu>bookmark.on {
	border-bottom: 3px solid #febd01;
}

menu>setting.on {
	border-bottom: 3px solid #f16559;
}

menu a {
	color: #303133;
	font-weight: bold;
	text-shadow: 0px -1px 1px rgba(255, 255, 255, 0.7);
	line-height: 40px;
}

/*fafa*/
panelWrapper {
	position: absolute;
	top: 95px;
	right: 0px;
	bottom: 0px;
	left: 0px;
	z-index: 10;
}

panel {
	position: absolute;
	top: -100%;
	width: 100%;
	height: 100%;
	background-color: #FDFDFD;
}

contents {
	position: relative;
	width: 100%;
	height: 100%;
}

contents section {
	position: absolute;
	width: 100%;
	height: 100%;
}

contents section:nth-of-type(1) {
	left: 0%;
	background-color: #5d8bfc;
}

contents section:nth-of-type(2) {
	left: 100%;
	background-color: #aac700;
}

contents section:nth-of-type(3) {
	left: 200%;
	background-color: #febd01;
}

contents section:nth-of-type(4) {
	left: 300%;
	background-color: #f16559;
}

section h1 {
	position: absolute;
	color: white;
	font-size: 3em;
	font-weight: bold;
	top: 10px;
	left: 10px;
}

/*dada*/
panelWrapper.fold_panel {
    animation: fold;
    animation-duration: 0.4s;
    animation-timing-function: ease;
    animation-fill-mode: forwards;

    -webkit-animation: fold;
    -webkit-animation-duration: 0.4s;
    -webkit-animation-timing-function: ease;
    -webkit-animation-fill-mode: forwards;
}
@keyframes fold {
	from { -webkit-transform: translateY(100%); }
	to { -webkit-transform: translateY(0px); }
}
@-webkit-keyframes fold {
	from { -webkit-transform: translateY(100%); }
	to { -webkit-transform: translateY(0px); }
}

panelWrapper.unfold_panel {
    animation: unfold;
    animation-duration: 0.4s;
    animation-timing-function: ease;
    animation-fill-mode: forwards;

    -webkit-animation: unfold;
    -webkit-animation-duration: 0.4s;
    -webkit-animation-timing-function: ease;
    -webkit-animation-fill-mode: forwards;
}
@keyframes unfold {
	from { -webkit-transform: translateY(0px); }
	to { -webkit-transform: translateY(100%); }
}
@-webkit-keyframes unfold {
	from { -webkit-transform: translateY(0px); }
	to { -webkit-transform: translateY(100%); }
}

panelButtons {
	position: absolute;
	width: 50px;
	height: 20px;
	left: 50%;
	margin-left: -25px;
	bottom: 0px;
	z-index: 100;
}

panelButtons > * {
	position: absolute;
	width: 100%;
	height: 100%;
	background-color: #EEE;
	border: 1px solid #ABABAB;
}

unfold {
	display: block;
	bottom: -20px;
	border-bottom-left-radius: 5px;
	border-bottom-right-radius: 5px;
	-webkit-border-bottom-left-radius: 5px;
	-webkit-border-bottom-right-radius: 5px;
}

fold {
	display: none;
	border-top-left-radius: 5px;
	border-top-right-radius: 5px;
	-webkit-border-top-left-radius: 5px;
	-webkit-border-top-right-radius: 5px;
}

.unfold_panel unfold {
	display: none;
}

.unfold_panel fold {
	display: block;
}

.fold_panel unfold {
	display: block;
}

.fold_panel fold {
	display: none;
}

panelButtons div {
	display: block;
	width: 100%;
	height: 100%;
}

div.panelFold {
	background: url(/images/mobile_fold.png) no-repeat center;
}

div.panelUnfold {
	background: url(/images/mobile_unfold.png) no-repeat center;
}

/* ================= */
map {
	position: absolute;
	top: 95px;
	right: 0px;
	bottom: 0px;
	left: 0px;
	background-color: #888;
	z-index: 1;
}

